# g

./: CMakeLists.txt
src/: main.cpp  program_settings.h
src/algo/: sum32.cpp  sum32.h  word_automata.cpp  word_automata.h
src/argparse/: args.cpp  args.h
src/tests/: aparse_unittest.cpp  sum32_unittest.cpp  word_unittest.cpp
